<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nobleNote</string>
    <string name="edit_message">Edit</string>
    <string name="emptyNoteHint">Click to enter text</string>
    <string name="notes">Notes</string>
    <string name="notebooks">Notebooks</string>
    <string name="bold" translatable="false">&lt;b&gt;B&lt;/b&gt;</string>
    <string name="italic">Italic</string>
    <string name="underline">Underline</string>
    <string name="strikethrough">Strikethrough</string>
    <string name="remove">Remove</string>

    <string name="rename_dialog_text">Please enter a new name</string>
    <string name="rename">Rename</string>
    <string name="HTML" translatable="false">HTML</string>
    <string name="noteNotRenamed">Note not renamed</string>
    <string name="notebookNotRenamed">Notebook not renamed</string>
    <string name="renameNote">Rename Note</string>
    <string name="renameNotebook">Rename Notebook</string>
    <string name="enterNewName">Please enter a new name</string>
    <string name="enterName">Please enter a name</string>
    <string name="newNote">New Note</string>
    <string name="newNotebook">New Notebook</string>
    <string name="noteNotCreated">note not created</string>
    <string name="notebookNotCreated">Notebook not created</string>
    <string name="notCreatedNotebookExists">Notebook not created because a notebook with the same name already exists </string>
    <string name="notCreatedNoteExists">Note not created because a notebook with the same name already exists</string>
    <string name="notebookExists">a notebook with the same name already exists </string>
    <string name="noteExists">a note with the same name already exists</string>
    <string name="removeMultipleNotes">Remove Multiple Notes</string>
    <string name="removeMultipleNotesQuestion">Are you sure you want to remove the selected note(s)?</string>
    <string name="notesNotRemoved">note(s) not removed</string>
    <string name="noteSaved">note saved</string>
    <string name="noteReloaded">note reloaded</string>
    <string name="noNotebookExists">Cannot create note. You must first create a notebook</string>
    <string name="title_noNotebookExists">No Notebook Found</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title_store_external_storage">Notebook storage location</string>
    <string name="action_done">Done</string>
    <string name="action_redo">Redo</string>
    <string name="action_undo">Undo</string>
    <string name="action_copy_to_clipboard">Copy to clipboard</string>
    <string name="msg_copied_to_clipboard">Note copied to clipboard</string>
    <string name="msg_items_removed">Items removed</string>
    <string name="msg_directory_selected">Directory Selected:</string>
    <string name="msg_external_storage_permission_denied">Permission has been denied.</string>
    <string name="msg_file_loading_error">Error: Could not load file</string>
    <string name="msg_paste_error">There was an error pasting your notes</string>
    <string name="no_results_found">No Results Found</string>

    <string name="keepEditing">Keep Editing</string>
    <string name="discard">Discard</string>
    <string name="dialogDiscardKeepEditing">Discard your changes and quit editing?</string>
    <string name="find_in_text">find in text</string>
    <string name="search_hint">Search</string>
    <string name="title_search_results">All Results</string>
    <string name="notebook_list_empty">There are no notebooks yet. Please Click the + button to create a new notebook</string>
    <string name="note_list_empty">There are no notes yet. Please Click the + button to create a new note</string>
    <string name="cut">Cut</string>
    <string name="show_html_source_code">Show HTML Source Code</string>
    <string name="action_paste">Paste</string>
    <string name="msg_n_notes_in_clipboard">%1$d notes in clipboard</string>

    <string name="title_activity_preferences">Settings</string>
    <string name="pref_summary_off_auto_save">Do not save notes automatically</string>
    <string name="pref_summary_on_auto_save">Save notes automatically</string>
    <string name="pref_title_auto_save">Auto save</string>
    <string name="pref_summary_root_path_internal">Notebooks are saved to the internal storage. Click to Change.</string>



    <string name="pref_key_internal_storage" translatable="false">pref_key_internal_storage</string>
    <string name="pref_key_saf_picker" translatable="false">pref_key_saf_picker</string>
    <string name="msg_existing_notebooks_not_transferred">Warning! Your existing notebooks will not be transferred automatically!</string>
    <string name="msg_store_internal_storage_again">Your existing notebooks are currently stored on the app private storage.
        After selecting a public folder, you can always go back to the current storage location by clicking \"Use app private storage\"</string>
    <string name="title_store_internal_storage">Use app private storage</string>
    <string name="msg_store_internal_storage">Notebooks  will be stored on the app private storage</string>
    <string name="title_use_external_storage">Select a public folder</string>
    <string name="pref_summary_store_internal_storage">Click store your notebooks in the app private storage</string>
    <string name="pref_summary_store_external_storage">Click to select a public folder to store your notebooks</string>
    <string name="msg_error_disallowed_characters_in_filename">"The following characters are disallowed: "</string>

    <!-- non translatable because earlier versions did only support english locale -->
    <string name="msg_upgrade" translatable="false">It seems you are upgrading from an earlier, incompatible version of nobleNote. Your notebooks are currently stored in this path: %1$s. Please choose this folder in the following dialog to complete the upgrade.</string>
    <string name="title_upgrade_info" translatable="false">Upgrade info</string>
    <string name="title_storage_removed">Storage device removed</string>
    <string name="msg_storage_removed">The public folder where your notebooks are stored is currently not accessible</string>


</resources>